--- a/Style/style.css
+++ b/Style/style.css
@@ -16,16 +16,26 @@ header{display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 40%;
 }
-nav ul{display: flex;}
-
+nav ul{display: flex;
+    flex-direction: row;
+}
+#Sign-up{display: flex;}
 nav li{list-style: none;
+    margin-left: 10px;
+    padding-left: 10px;
+    
     
 }
 
-nav a{text-decoration: none;}
+nav a{text-decoration: none;
+    align-items: center;
+}
 /*----Menu bar end-----*/
 
-.section-1, .company-icon{margin-left: 120px;
+.products:hover .products-img{transform: scale(1.2);
+    transition: transform 2s ease-in;}
+
+.section-1, .company-icon, .Collection-info{margin-left: 120px;
     margin-right: 80px;
     
 }
@@ -37,11 +47,11 @@ nav a{text-decoration: none;}
     margin-bottom: 10px;
 }
 
-.products-info{border: 1px solid red;
+.products-info{border: 1px solid white;
     width: 582px;
     height: 270px;
 }
-button{background-color: slateblue;
+button, .submit{background-color: slateblue;
     color: white;
     padding: 8px 15px;
     border: 0px solid white;
@@ -63,5 +73,69 @@ button{background-color: slateblue;
 }
 .icon{display: flex;
     justify-content: space-evenly;
+    margin-bottom: 100px;
+    border-top:1px solid gray ;
+    border-bottom:1px solid gray ;
     
 }
+
+.Collection-title{font-size: 28px;}
+
+.Collection-info{display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    margin-right: 30px;
+    
+}
+#title{text-align: center;}
+.Collection{width: 329px;
+    height: 476px;
+    border: 0px solid white;
+    box-shadow: 0px 3px 8px 6px #ecebe6;
+    
+}
+
+.image{width: 300px;
+    height: 256px;
+}
+
+.Collection-details, .image{padding-left: 15px;}
+
+.fas{color: #FB8200;}
+
+.See-More{text-align: right;
+    margin-right:80px ;
+}
+.See-More a{text-decoration: none;
+    color:orangered;
+}
+
+.Sign-up-form{background-color: rgb(255, 208, 0);
+    height: 190px;
+}
+
+.form{width: 400px;
+    margin-bottom: 50px;
+    margin-top: 10px;
+    justify-content: center;
+    margin-left: 37%;
+    background-color: rgb(255, 196, 0);
+    
+}
+
+fieldset{display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-row-gap: 10px;
+    
+}
+fieldset, input{font-weight: 700;}
+
+footer{width: 100%;
+    height: 240px;
+    background-color: #0A0826;
+    color: white;
+    text-align: center;
+}
+
+.footer-div{padding-top: 40px;}
